@@ -4,8 +4,10 @@ History of feedfeeder
 1.0rc7 (unreleased)
 -------------------
 
-- Nothing changed yet.
-
+- When setting the text of a feed item during updating, store the
+  mimetype as well if it is a supported one.
+  Refs http://plone.org/products/feedfeeder/issues/24
+  [maurits]
 
 1.0rc6 (2009-09-21)
 -------------------
